--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hivpn-app",
-  "version": "1.0.19",
-  "repository": "git@github.com:b3hr4d/hivpn-app.git",
+  "name": "test-wallet",
+  "version": "1.0.20",
+  "repository": "git@github.com:b3hr4d/test-wallet.git",
   "author": "b3hr4d <behradmusiclove@yahoo.com>",
   "license": "MIT",
   "scripts": {
